@@ -1,3 +1,7 @@
+7/31/2013
+---------------------------
+- KO Fixed #465 (Zooming in with scroll wheel should center)
+
 7/27/2013
 ---------------------------
 - KO Added support for loading tif images via GDAL (#488)
